fix project card content visibility

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -187,9 +187,9 @@ body{
   background:
   linear-gradient(
     135deg,
-    #0f0f0f,
-    #252427,
-    #161516
+    #330996,
+    #330988,
+    #0c1d80
   );
 
   -webkit-mask:
